--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "mysql": "^2.18.1"
-  }
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.1.7"
+  },
+  "description": ""
 }
